@@ -23,12 +23,16 @@ TYPES OF CHANGES:
 - Calculating the date for Request for Orders has been updated to count 23 court days instead of a mixture of calendar days and court days.
 - Added reverse service date calculator. This tool will tell you the last day we can accept the document with a specified hearing date.
 - Added COE appeal date calculator. This will also copy the boilerplate comment that the user can paste in File Actions.
+- Added MOD breakdown commenting tool. This will also copy the boilerplate comment that the user can post in File Actions.
+- Added splash screen.
 
 ### Changed
 - Made significant changes to the code in order for the new features to work.
 - Returning to the main menu is now automatic; pressing Enter key is no longer required.
 - Text cursor is now hidden when messages are diplayed.
 - Converted wall of text at the beginning into  more questions to the "Can I close this file?" process.
+- When computing the stay expiration date for the employer (bankrupty), the boilerplate comment is copied so that the user can paste immediately.
+- The CPA learned new ways to say goodbye.
 
 
 ## [1.0] - 2020-07-24
